<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dataFromprevious"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#ff8400"
            android:textSize="25dp"
            android:textScaleX="1.3"
            android:layout_marginBottom="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_place" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/quarter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_quarter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_quarter" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/town"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_town" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Photo"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:background="@drawable/border_orange"
                android:layout_marginTop="0dp"
                android:onClick="getPicture"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/picture"/>
                <!--<ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete_photo"
                    android:src="@drawable/fax"
                    android:visibility="gone"/>-->
            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Client Signature"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:background="@drawable/border_orange"
                android:layout_marginTop="0dp"
                android:onClick="getClientSignature"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/client_signature" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Agent Signature"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="20dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:background="@drawable/border_orange"
                android:layout_marginTop="0dp"
                android:onClick="getAgentSignature"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/agent_signature"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Envoyer"
                android:layout_weight="30"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="20dp"
                android:textColor="#ff8400"
                android:layout_gravity="center"
                android:background="@drawable/border_ricerca"
                android:layout_marginTop="0dp"
                android:onClick="makePickup"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
